--- a/index.html
+++ b/index.html
@@ -3,38 +3,36 @@
 
 <head>
   <title>Trabalho de Formais</title>
- <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
+    crossorigin="anonymous"></script>
 </head>
 
 <body>
   <script src="main.js"></script>
 
-<div class="sidebar"
-">
-  stylee="""background-color: #4d4e50;
-    <div class="sidebar-header"><h3>Trabalho de Formais</h3></div><ul>
-        <li>MENU 1 OPTION</li>
-        <li>MENU 1 OPTION</li>
-        <li>MENU 1 OPTION</li>
-    </ul>
+  <!-- Side navigation -->
+  <div class="sidenav">
+    <a>Trabalho de Formais</a>
+    <a href="#">Automatos</a>
+    <a href="#">Gramáticas</a>
+    <a href="#">REGEX</a>
+    <a href="#">paunocudajerusa</a>
+  </div>
 
-    <ul>
-        <li>MENU 2 OPTION</li>
-        <li>MENU 2 OPTION</li>
-        <li>MENU 2 OPTION</li>
-    </ul>
-</div>
-<div class="container">
-<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vel lacus quis eros porttitor lacinia et eget mauris. Mauris convallis ligula purus. Donec vehicula sagittis interdum. Aenean mi justo, ullamcorper non est at, tempus cursus neque. Nulla sollicitudin tortor sed eleifend consectetur. Nunc facilisis odio turpis, eu faucibus tellus ultrices et. Ut dapibus massa sit amet vestibulum pharetra. Nulla a accumsan leo. Cras metus mauris, finibus vel maximus sit amet, hendrerit eu orci. In eu enim justo. Vestibulum tempus mauris eu urna ullamcorper molestie. Duis at tortor ac nibh pretium consequat quis eget elit.
+  <!-- Page content -->
+  <div class="main">
+    LOREM IPSUM CARAIOOO
+  </div>
 
-Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed non tortor nec ante porttitor ornare vitae nec ante. Integer convallis eros lobortis, ullamcorper quam et, mollis felis. Proin varius gravida purus a tincidunt. Maecenas id commodo lorem. Donec elementum pulvinar feugiat. Mauris dictum pellentesque ex non faucibus.
-</div>
-
-
+  <div class="footer">
+    <p>Artur Barichello, Lucas Verdade, Lucas Zacchi. This product is not intended for educational uses     .</p>
+  </div>
 
 
 </body>
