--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
   <script src="https://unpkg.com/gojs@2.1/release/go-debug.js"></script>
 </head>
 
-<body onload="init()">
+<body onload="init(); hide_element('grammar')">
   <div id="wrapper" class="row">
     <!-- Side navigation -->
     <div class="col-2 sidenav">
       <a style="color: white; font-size: 25px;"><strong>Trabalho de Formais &#128532 </strong></a>
       <hr>
-      <a href="#" onclick="show_element('board') && hide_element('grammar')">Autômatos Finitos</a>
-      <a href="#" onclick="hide_element('board') && show_element('grammar')">Gramáticas Regulares</a>
+      <a href="#" onclick="show_element('board'); hide_element('grammar')">Autômatos Finitos</a>
+      <a href="#" onclick="show_element('grammar'); hide_element('board')">Gramáticas Regulares</a>
       <a href="#">Expressões Regulares</a>
       <div class="mb-3">
         <label for="formFile" style="color: white;">Subir arquivo</label>
@@ -36,13 +36,13 @@
     <div class="col-10">
       <div id="board" style="border: solid 1px black; width:100%; min-height:615px;"></div>
 
-      <!-- <div id="grammar"> -->
+      <div id="grammar">
 
-      <!-- <table> -->
-      <!-- here goes our data! -->
-      <!-- </table> -->
+        <table class="grammar_table">
+          <!-- Grammar table -->
+        </table>
 
-      <!-- </div> -->
+      </div>
     </div>
   </div>
   </div>
@@ -55,5 +55,6 @@
   <script src="files.js"></script>
   <script src="board.js"></script>
   <script src="grammar.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </html>
