--- a/index.html
+++ b/index.html
@@ -18,22 +18,56 @@
   <div id="wrapper" class="row">
     <!-- Side navigation -->
     <div class="col-2" style="z-index: 999999;">
-      <div id="main-menu" class="sidenav">
-        <a style="color: white; font-size: 25px;"><strong>Trabalho de Formais &#128532 </strong></a>
+      <div id="menu-wrapper" class="sidenav menu">
+        <a style="color: white; font-size: 25px;"><strong>Trabalho de Formais &#128532</strong></a>
         <hr>
-        <a href="#" onclick="show_element('board'); hide_element('grammar')">Autômatos Finitos</a>
-        <a href="#" onclick="show_element('grammar'); hide_element('board')">Gramáticas Regulares</a>
-        <a href="#">Expressões Regulares</a>
-        <div class="mb-3">
-          <label for="formFile" style="color: white;">
-            <span aria-hidden="true"><a id="formFile-btn" href="#" for="formFile"> Subir arquivo</a></span>
-            <input class="form-control" type="file" id="formFile" style="display: none;">
-          </label>
-        </div>
-        <button id="save-btn" class="btn btn-primary" type="button" onclick="saveModel()">SALVAR</button>
-        <br>
-      </div>
+        <div id="main-menu">
+          <a href="#" onclick="show_element('board'); hide_element('grammar')">Autômatos Finitos</a>
+          <a href="#" onclick="show_element('grammar'); hide_element('board'); grammarTableInit()">
+            Gramáticas Regulares
+          </a>
+          <a href="#">Expressões Regulares</a>
+          <hr>
 
+          <div class="mb-3">
+            <label for="formFile" style="color: white;">
+
+              Manipulação
+              <input id="state-name" type="textarea" placeholder="nome do estado">
+              <input id="state-transition-from" type="textarea" placeholder="origem">
+              <input id="state-transition-to" type="textarea" placeholder="destino">
+              <input id="state-transition-symbol" type="textarea" placeholder="simbolo de transicao">
+
+            </label>
+          </div>
+
+          <hr>
+
+          <span aria-hidden="true" class="btn btn-primary">
+            <a id="formFile-btn" href="#" for="formFile">
+              Subir arquivo
+            </a>
+          </span>
+          <input class="form-control" type="file" id="formFile" style="display: none;">
+          <span id="save-btn" class="btn btn-primary" onclick="saveActiveJSON()">SALVAR</span>
+
+          <hr>
+
+          <div id="automata-menu" style="display: block">
+            <a href="#" onclick="toggleMenu('automata-menu')">Voltar</a>
+            <a href="#" onclick="createState()">Create State</a>
+            <a href="#" onclick="createTransition()">Create Transition</a>
+            <!-- <a href="#" onclick="">Undo</a>
+            <a href="#" onclick="">Redo</a> -->
+            <a href="#" onclick="clearAll()">Clear</a>
+          </div>
+
+          <hr>
+
+          <input id="json-editor" type="textarea">
+
+        </div>
+      </div>
     </div>
 
     <!-- Page content -->
@@ -41,11 +75,7 @@
       <div id="board" style="border: solid 1px black; width:90%; min-height:95vh;"></div>
 
       <div id="grammar">
-
-        <table class="grammar_table">
-          <!-- Grammar table -->
-        </table>
-
+        <!-- Grammar Table -->
       </div>
     </div>
   </div>
@@ -59,6 +89,6 @@
   <script src="files.js"></script>
   <script src="board.js"></script>
   <script src="grammar.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="actions.js"></script>
 
 </html>
