--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/gojs@2.1/release/go-debug.js"></script>
+  <script src="https://unpkg.com/gojs@2.1/release/go.js"></script>
   <script src="https://pagecdn.io/lib/ace/1.4.12/ace.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://pagecdn.io/lib/ace/1.4.12/theme-tomorrow_night.min.js" type="text/javascript"
     crossorigin="anonymous"></script>
