--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Trabalho de Formais &#128532</title>
+  <title>Trabalho de Formais 🙃</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
@@ -24,7 +24,7 @@
     <!-- Side navigation -->
     <div class="col-2" style="z-index: 999999;">
       <div id="menu-wrapper" class="sidenav menu">
-        <a style="color: white; font-size: 25px;"><strong>Trabalho de Formais &#128532</strong></a>
+        <a style="color: white; font-size: 25px;"><strong>Trabalho de Formais 🙃</strong></a>
         <hr>
         <div id="main-menu">
           <!-- Submenu de categoria -->
@@ -88,7 +88,7 @@
           </li>
           <hr>
           <li>
-            <label for="regexp-result">Resultados:</label>Em breve &#128532<br>
+            <label for="regexp-result">Resultados:</label>Em breve 🙃<br>
             <p id="regexp-result"></p>
           </li>
         </ul>
@@ -104,7 +104,7 @@
         var editor = ace.edit("editor");
         editor.setTheme("ace/theme/tomorrow_night");
         editor.session.setMode("ace/mode/json");
-        editor.session.setValue((('😔'.repeat(56)) + '\n').repeat(100));
+        editor.session.setValue((('🙃'.repeat(56)) + '\n').repeat(100));
       </script>
     </div>
 
