--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
 
           <hr>
-          <h5 style="color: white;text-align: center">Operações:</h5 >
+          <h5 style="color: white;text-align: center">Operações:</h5>
           <div id="union-button" style="display: block">
             <a class="btn btn-secondary" href="#" onclick="applyBinaryOperation(union)">União (U)</a>
           </div>
@@ -63,7 +63,17 @@
             <a class="btn btn-secondary" href="#" onclick="verify()">Verificar sentença</a>
           </div>
 
+          <h5 style="color: white;text-align: center">Converter</h5>
+          <div id="union-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="grammarToAutomata()">Gramática -> Autômato (U)</a>
+          </div>
+          <!-- <div id="union-button" style="display: block"> -->
+          <!-- <a class="btn btn-secondary" href="#" onclick="applyBinaryOperation(intersection)">Interseção (∩)</a> -->
+          <!-- </div> -->
+
           <hr>
+
+
         </div>
       </div>
 
