--- a/index.html
+++ b/index.html
@@ -63,9 +63,12 @@
             <a class="btn btn-secondary" href="#" onclick="verify()">Verificar sentença</a>
           </div>
 
-          <h5 style="color: white;text-align: center">Converter</h5>
-          <div id="union-button" style="display: block">
-            <a class="btn btn-secondary" href="#" onclick="grammarToAutomata()">Gramática -> Autômato (U)</a>
+          <h5 style="color: white;text-align: center">Converter:</h5>
+          <div id="grafd-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="grammarToAutomata()">Gramática -> Autômato</a>
+          </div>
+          <div id="convert-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="automataToGrammar()">Autômato -> Gramática</a>
           </div>
 
           <hr>
