--- a/index.html
+++ b/index.html
@@ -59,10 +59,13 @@
           <div id="union-button" style="display: block">
             <a class="btn btn-secondary" href="#" onclick="applyBinaryOperation(intersection)">Interseção (∩)</a>
           </div>
-
-          <h5 style="color: white;text-align: center">Converter</h5>
-          <div id="union-button" style="display: block">
-            <a class="btn btn-secondary" href="#" onclick="grammarToAutomata()">Gramática -> Autômato (U)</a>
+          <hr>
+          <h5 style="color: white;text-align: center">Converter:</h5>
+          <div id="grafd-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="grammarToAutomata()">Gramática -> Autômato</a>
+          </div>
+          <div id="convert-button" style="display: block">
+            <a class="btn btn-secondary" href="#" onclick="automataToGrammar()">Autômato -> Gramática</a>
           </div>
 
           <hr>
